--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -34,6 +34,9 @@ jobs:
         flake8 . --count --exit-zero --extend-ignore E402 --max-complexity=10 --max-line-length=127 --show-source --statistics
         # stop the build if there are Python syntax errors.
         autopep8 . --ignore E402 --recursive --diff --exit-code
+    - name: Install local package
+      run: |
+        python -m pip install --editable .
     - name: Test with pytest
       run: |
         coverage run -m pytest
@@ -42,4 +45,4 @@ jobs:
         coverage report --fail-under=80 --show-missing
     - name: Type checking with mypy
       run: |
-        mypy --strict .
+        mypy --strict --exclude='src' .
