--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,17 @@
 [build-system]
-requires = ["setuptools>=61.0"]
+requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "bytecore"
-version = "1.1.1"
+name = "bytecorefast"
+version = "1.0.0"
 authors = [
   { name="Joakim Winum Lien", email="joakim@winum.xyz" },
 ]
-description = "A minimal, 8-bit CPU emulator designed to help developers explore low-level computing concepts."
+description = "A high-performance, 8-bit CPU emulator, designed as a drop-in replacement for ByteCore, offering enhanced speed while maintaining full compatibility with the original ByteCore interfaces."
+dependencies = [
+  "bytecore==1.1.1"
+]
 readme = "README.md"
 requires-python = ">=3.11"
 classifiers = [
@@ -17,12 +20,15 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 
+[project.optional-dependencies]
+dev = ["mypy", "types-setuptools", "pytest"]
+
 [project.urls]
-"Homepage" = "https://github.com/joakimwinum/bytecore"
-"Bug Tracker" = "https://github.com/joakimwinum/bytecore/issues"
+"Homepage" = "https://github.com/joakimwinum/bytecorefast"
+"Bug Tracker" = "https://github.com/joakimwinum/bytecorefast/issues"
 
 [tool.setuptools.packages.find]
 where = ["src"]
 
 [tool.setuptools.package-data]
-bytecore = ["py.typed"]
+bytecorefast = ["py.typed"]
