--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
 pytest>=7.4.0,<8.3.0
 autopep8>=2.0.2,<2.2.0
 mypy>=1.4.0,<1.11.0
+build
+setuptools>=61.0
+types-setuptools
+wheel
+bytecore==1.1.1
