--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -16,9 +16,9 @@ jobs:
         python-version: ["3.11"]
 
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v5
+      uses: actions/setup-python@82c7e631bb3cdc910f68e0081d67478d79c6982d
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
@@ -44,6 +44,3 @@ jobs:
     - name: Type checking with mypy
       run: |
         mypy --strict --exclude='src' .
-    - name: Calculate and log performance
-      run: |
-        python src/benchmarks/call_benchmark.py
