--- a/.github/workflows/python-build.yml
+++ b/.github/workflows/python-build.yml
@@ -26,3 +26,4 @@ jobs:
         run: |
           pip install dist/bytecorefast-*.tar.gz
           python -c "import bytecorefast; print(bytecorefast)"
+        shell: bash
