--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,3 +3,7 @@ include src/*.c
 include src/*.h
 include src/bytecorefast/*.c
 include src/bytecorefast/*.h
+
+# Exclude
+prune src/benchmarks
+exclude tests/test_benchmark.py
