Set -O3 optimization flag for improved performance

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.10)
 project(ByteCoreFast)
 set(CMAKE_C_STANDARD 99)
 set(CMAKE_C_COMPILER clang)
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -Wunused")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -Wunused -O3")
 include_directories(src tests)
 
 # Make clang recognize <Python.h>
