--- a/.github/workflows/python-build.yml
+++ b/.github/workflows/python-build.yml
@@ -12,6 +12,9 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: ["3.11"]
 
+    env:
+      MANYLINUX_DOCKER_IMAGE: quay.io/pypa/manylinux_2_28_x86_64
+
     steps:
       - uses: actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29
       - name: Setup Python
@@ -20,7 +23,12 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: pip install -r requirements.txt
-      - name: Build package
+      - name: Build package (Linux)
+        if: runner.os == 'Linux'
+        run: |
+          docker run -it --rm --name manylinux -v $(pwd):/bytecorefast $MANYLINUX_DOCKER_IMAGE /bin/bash -c "cd bytecorefast && /opt/python/cp311-cp311/bin/python3.11 -m build && mkdir dist/wheels && mv dist/*.whl dist/wheels && auditwheel repair dist/wheels/*.whl -w dist/ && rm -rf dist/wheels"
+      - name: Build package (macOS and Windows)
+        if: runner.os == 'macOS' || runner.os == 'Windows'
         run: python -m build
       - name: Test self building package
         run: |
