--- a/.github/workflows/python-build.yml
+++ b/.github/workflows/python-build.yml
@@ -40,3 +40,17 @@ jobs:
         with:
           name: distribution-archives-${{ matrix.os }}-${{ matrix.python-version }}
           path: dist
+
+  download:
+
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Download All Artifacts
+      uses: actions/download-artifact@65a9edc5881444af0b9093a5e628f2fe47ea3b2e
+      with:
+        path: distribution-archives
+        pattern: distribution-archives-*
+        merge-multiple: true
+    - run: ls --recursive distribution-archives
