--- a/.github/workflows/python-build.yml
+++ b/.github/workflows/python-build.yml
@@ -53,4 +53,10 @@ jobs:
         path: distribution-archives
         pattern: distribution-archives-*
         merge-multiple: true
-    - run: ls --recursive distribution-archives
+    - name: List distribution archives
+      run: ls --recursive distribution-archives
+    - name: Upload combined distribution archives
+      uses: actions/upload-artifact@65462800fd760344b1a7b4382951275a0abb4808
+      with:
+        name: combined-distribution-archives
+        path: distribution-archives
