--- a/.github/workflows/python-build.yml
+++ b/.github/workflows/python-build.yml
@@ -2,7 +2,6 @@ name: Python Build
 
 on: [push]
 
-
 jobs:
   python-tests:
 
@@ -113,3 +112,58 @@ jobs:
       with:
         name: combined-distribution-archives
         path: distribution-archives
+
+  publish:
+
+    if: startsWith(github.ref, 'refs/tags/')
+    needs: [python-tests, c-tests, build, combine]
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29
+    - name: Download combined distribution archives
+      uses: actions/download-artifact@65a9edc5881444af0b9093a5e628f2fe47ea3b2e
+      with:
+        name: combined-distribution-archives
+        path: dist
+    - name: List dist folder
+      run: ls --recursive dist
+    - name: Extract and store tag
+      run: |
+        TAG=${GITHUB_REF#refs/tags/}
+        echo "Tag: $TAG"
+        echo "TAG=$TAG" >> $GITHUB_ENV
+    - name: Verify version in combined distribution archives
+      run: |
+        for file in dist/*; do
+          filename=$(basename "$file")
+          if [[ $filename != bytecorefast-$TAG* ]]; then
+            echo "File $filename does not start with bytecorefast-$TAG"
+            exit 1
+          fi
+        done
+        echo "All files in dist directory start with bytecorefast-$TAG"
+    - name: Verify existence of source distribution archive
+      run: |
+        if [[ ! -f dist/bytecorefast-$TAG.tar.gz ]]; then
+          echo "Error: dist/bytecorefast-$TAG.tar.gz does not exist."
+          exit 1
+        fi
+        echo "dist/bytecorefast-$TAG.tar.gz exists."
+    - name: Verify version in pyproject.toml
+      run: |
+        VERSION=$(grep --perl-regexp --only-matching '(?<=^version = ")[^"]*' pyproject.toml)
+        if [[ "$VERSION" != "$TAG" ]]; then
+          echo "Version in pyproject.toml $VERSION does not match the tag $TAG"
+          exit 1
+        fi
+        echo "Version in pyproject.toml matches the tag: $VERSION"
+    - name: Publish package to PyPI
+      uses: pypa/gh-action-pypi-publish@81e9d935c883d0b210363ab89cf05f3894778450
+      with:
+        verify-metadata: true
+        skip-existing: false
+        verbose: false
+        print-hash: true
+        user: __token__
+        password: ${{ secrets.PYPI_API_TOKEN }}
