--- a/.github/workflows/build-test-publish.yml
+++ b/.github/workflows/build-test-publish.yml
@@ -3,7 +3,7 @@ name: Build, Test, and Publish Python Package
 on: [push]
 
 jobs:
-  python-tests:
+  test-python:
 
     runs-on: ubuntu-latest
     strategy:
@@ -41,7 +41,7 @@ jobs:
       run: |
         mypy --strict --exclude='src' .
 
-  c-tests:
+  test-c:
 
     runs-on: ubuntu-latest
 
@@ -56,7 +56,7 @@ jobs:
 
   build:
 
-    needs: [python-tests, c-tests]
+    needs: [test-python, test-c]
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -96,7 +96,7 @@ jobs:
 
   combine:
 
-    needs: [python-tests, c-tests, build]
+    needs: [test-python, test-c, build]
     runs-on: ubuntu-latest
 
     steps:
@@ -117,7 +117,7 @@ jobs:
   publish:
 
     if: startsWith(github.ref, 'refs/tags/')
-    needs: [python-tests, c-tests, build, combine]
+    needs: [test-python, test-c, build, combine]
     runs-on: ubuntu-latest
     environment:
       name: pypi
