--- a/.github/workflows/benchmarks.yml
+++ b/.github/workflows/benchmarks.yml
@@ -13,9 +13,9 @@ jobs:
         python-version: ["3.11"]
 
     steps:
-      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
+      - uses: actions/checkout@v4
       - name: Setup Python
-        uses: actions/setup-python@0b93645e9fea7318ecaed2b359559ac225c90a2b
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
@@ -29,7 +29,7 @@ jobs:
           python src/benchmarks/call_benchmark.py > benchmarks-${{ matrix.os }}-${{ matrix.python-version }}.txt
           cat benchmarks-${{ matrix.os }}-${{ matrix.python-version }}.txt
       - name: Upload benchmarks
-        uses: actions/upload-artifact@b4b15b8c7c6ac21ea08fcf65892d2ee8f75cf882
+        uses: actions/upload-artifact@v4
         with:
           name: benchmarks-${{ matrix.os }}-${{ matrix.python-version }}
           path: benchmarks-${{ matrix.os }}-${{ matrix.python-version }}.txt
