--- a/.github/workflows/build-test-publish.yml
+++ b/.github/workflows/build-test-publish.yml
@@ -12,9 +12,9 @@ jobs:
         python-version: ["3.11"]
 
     steps:
-    - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
+    - uses: actions/checkout@v4
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@0b93645e9fea7318ecaed2b359559ac225c90a2b
+      uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
@@ -46,7 +46,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
+    - uses: actions/checkout@v4
     - name: Install Unity
       run: ./setup_unity.sh
     - name: cmake
@@ -69,9 +69,9 @@ jobs:
       PACKAGE_NAME: bytecorefast
 
     steps:
-      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
+      - uses: actions/checkout@v4
       - name: Setup Python
-        uses: actions/setup-python@0b93645e9fea7318ecaed2b359559ac225c90a2b
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
@@ -89,7 +89,7 @@ jobs:
           python -c "import ${{ env.PACKAGE_NAME }}; print(${{ env.PACKAGE_NAME }})"
         shell: bash
       - name: Upload distribution archives
-        uses: actions/upload-artifact@b4b15b8c7c6ac21ea08fcf65892d2ee8f75cf882
+        uses: actions/upload-artifact@v4
         with:
           name: distribution-archives-${{ matrix.os }}-${{ matrix.python-version }}
           path: dist
@@ -101,7 +101,7 @@ jobs:
 
     steps:
     - name: Download All Artifacts
-      uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16
+      uses: actions/download-artifact@v4
       with:
         path: distribution-archives
         pattern: distribution-archives-*
@@ -109,7 +109,7 @@ jobs:
     - name: List distribution archives
       run: ls --recursive distribution-archives
     - name: Upload combined distribution archives
-      uses: actions/upload-artifact@b4b15b8c7c6ac21ea08fcf65892d2ee8f75cf882
+      uses: actions/upload-artifact@v4
       with:
         name: combined-distribution-archives
         path: distribution-archives
@@ -129,9 +129,9 @@ jobs:
       PACKAGE_NAME: bytecorefast
 
     steps:
-    - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
+    - uses: actions/checkout@v4
     - name: Download combined distribution archives
-      uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16
+      uses: actions/download-artifact@v4
       with:
         name: combined-distribution-archives
         path: dist
